# philosophers

./: CMakeLists.txt  initing.c  main.c  philosophers.h  test.c  utils.c  utils.h
philo_one/: filling_init_data.c  initing.c  main.c  parsing.c  philo_funcs.c  philosophers.h  utils.c  utils.h  utils2.c
philo_test/: main.c  philosophers.h
philo_three/: Makefile  filling_init_data.c  initing.c  killing.c  main.c  parsing.c  philo_funcs.c  philo_three  philosophers.h  utils.c  utils.h  utils2.c  utils3.c
philo_two/: initing.c  main.c  parsing.c  philosophers.h  utils.h
